k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cirda-frontend
spec:
  type: ClusterIP
  selector:
    app: cirda-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
